--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -2,11 +2,9 @@
   "extends": "@workspace/typescript-config/nextjs.json",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": ".",
-    "composite": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@workspace/ui/*": ["../../packages/ui/src/*"]
+      "#*": ["./src/*"],
+      "#workspace/ui/*": ["../../packages/ui/src/*"]
     },
     "plugins": [
       {
@@ -14,7 +12,6 @@
       }
     ]
   },
-  "references": [{ "path": "../server" }],
   "include": [
     "**/*.ts",
     "**/*.tsx",
