--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -18,23 +18,24 @@
     ]
   },
   "dependencies": {
-    "@workspace/server": "*",
-    "@workspace/ui": "*",
     "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-query": "^5.64.2",
+    "@workspace/server": "*",
+    "@workspace/ui": "*",
     "lucide-react": "0.456.0",
     "next": "^15.1.7",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "*",
-    "@workspace/typescript-config": "*",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "^20",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@workspace/eslint-config": "*",
+    "@workspace/typescript-config": "*",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.5.4"
