--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,28 +10,29 @@
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
-		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"clsx": "^2.1.1",
 		"lucide-react": "0.456.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"shadcn": "^2.4.0-canary.11",
 		"sonner": "^1.7.4",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@workspace/eslint-config": "*",
-		"@workspace/typescript-config": "*",
+		"@tailwindcss/postcss": "^4",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
 		"@types/react": "19.0.0",
 		"@types/react-dom": "19.0.0",
+		"@workspace/eslint-config": "*",
+		"@workspace/typescript-config": "*",
 		"autoprefixer": "^10.4.20",
-		"@tailwindcss/postcss": "^4",
-		"react": "^19.0.0",
 		"class-variance-authority": "^0.7.1",
+		"react": "^19.0.0",
 		"tailwindcss": "^4",
 		"typescript": "^5.6.3"
 	},
