feat(storefront): init cat and subcat select logic on item creation

--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "next:dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev --port 3000",
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ../server/.env.local next dev --port 3000",
+    "next:dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ../server/.env.local next dev --port 3000",
     "next:build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -19,11 +19,12 @@
   },
   "dependencies": {
     "@edge-runtime/cookies": "^6.0.0",
+    "@tanstack/react-form": "^1.0.0",
     "@tanstack/react-query": "^5.64.2",
     "@workspace/server": "*",
     "@workspace/ui": "*",
     "lucide-react": "0.456.0",
-    "next": "^15.1.7",
+    "next": "^15.2.1",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
