feat(repo): improve dynamic filters

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,7 +4,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@workspace/ui/*": ["./src/*"]
-		}
+		},
+		"jsx": "react"
 	},
 	"include": ["."],
 	"exclude": ["node_modules", "dist"]
