feat(storefront): new item initial images handler

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,8 +5,9 @@
 		"paths": {
 			"@workspace/ui/*": ["./src/*"]
 		},
+		"moduleResolution": "node",
 		"jsx": "react"
 	},
-	"include": ["."],
+	"include": [".", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules", "dist"]
 }
