--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,14 @@
 		"shadcn": "npx shadcn@canary",
 		"lint": "eslint . --max-warnings 0"
 	},
+	"exports": {
+		"./globals.css": "./src/styles/globals.css",
+		"./embla.css": "./src/styles/embla.css",
+		"./postcss.config": "./postcss.config.mjs",
+		"./lib/*": "./src/lib/*.ts",
+		"./components/*": "./src/components/*.tsx",
+		"./hooks/*": "./src/hooks/*.ts"
+	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-avatar": "^1.1.3",
@@ -23,9 +31,13 @@
 		"@radix-ui/react-switch": "^1.1.3",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"keen-slider": "^6.8.6",
 		"lucide-react": "0.456.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dnd-touch-backend": "^16.0.1",
 		"react-dom": "^19.0.0",
 		"shadcn": "^2.4.0-canary.11",
 		"sonner": "^1.7.4",
@@ -45,12 +57,5 @@
 		"react": "^19.0.0",
 		"tailwindcss": "^4",
 		"typescript": "^5.6.3"
-	},
-	"exports": {
-		"./globals.css": "./src/styles/globals.css",
-		"./postcss.config": "./postcss.config.mjs",
-		"./lib/*": "./src/lib/*.ts",
-		"./components/*": "./src/components/*.tsx",
-		"./hooks/*": "./src/hooks/*.ts"
 	}
 }
