feat(storefront): improve item new form handling

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -42,16 +42,18 @@
     "./lib/constants": "./src/lib/constants.ts"
   },
   "dependencies": {
-    "@hono/node-server": "^1.13.7",
-    "@hono/swagger-ui": "^0.5.0",
-    "@hono/zod-openapi": "^0.18.4",
-    "@hono/zod-validator": "^0.4.2",
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-presigned-post": "^3.758.0",
+    "@hono/node-server": "^1.13.8",
+    "@hono/swagger-ui": "^0.5.1",
+    "@hono/zod-openapi": "^0.19.2",
+    "@hono/zod-validator": "^0.4.3",
     "@scalar/hono-api-reference": "^0.5.172",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
-    "hono": "^4.7.2",
-    "hono-openapi": "^0.4.4",
+    "hono": "^4.7.4",
+    "hono-openapi": "^0.4.6",
     "hono-pino": "^0.7.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
