--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@workspace/server": "*",
     "@workspace/ui": "*",
+    "browser-image-compression": "^2.0.2",
     "lucide-react": "0.456.0",
     "next": "^15.2.1",
     "next-themes": "^0.4.3",
