--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,10 +29,12 @@
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.3",
+		"browser-image-compression": "^2.0.2",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"keen-slider": "^6.8.6",
 		"lucide-react": "0.456.0",
+		"motion": "^12.5.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dnd": "^16.0.1",
