--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -12,6 +12,11 @@ EMAIL_VERIFY_TOKEN_SECRET=
 RESET_TOKEN_SECRET=
 COOKIE_SECRET=
 
+AWS_REGION=
+AWS_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
