--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
     "@aws-sdk/s3-presigned-post": "^3.758.0",
     "@hono/node-server": "^1.13.8",
     "@hono/swagger-ui": "^0.5.1",
@@ -60,6 +61,7 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
+    "sharp": "^0.33.5",
     "stoker": "^1.4.2",
     "zod-openapi": "^4.2.3"
   },
@@ -74,6 +76,6 @@
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
-    "wrangler": "^3.109.2"
+    "wrangler": "^4.0"
   }
 }
