--- a/apps/server/wrangler.toml
+++ b/apps/server/wrangler.toml
@@ -1,5 +1,8 @@
 name = "tantovale-backend"
 main = "src/app.ts"
-compatibility_date = "2024-09-25"
+compatibility_date = "2024-09-23"
 compatibility_flags = [ "nodejs_compat" ]
 keep_vars = true
+
+[alias]
+"sharp" = "./polyfills/sharp-polyfill"
