--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "outDir": "./dist",
+    "rootDir": ".",
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
     "experimentalDecorators": true,
