--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -4,18 +4,17 @@ LOG_LEVEL=silent
 STOREFRONT_HOSTNAME=
 STOREFRONT_PORT=
 
-DATABASE_URL=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_HOST=localhost
+DATABASE_NAME=
+DATABASE_PORT=5432
 
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 EMAIL_VERIFY_TOKEN_SECRET=
 RESET_TOKEN_SECRET=
 COOKIE_SECRET=
-
-AWS_REGION=
-AWS_BUCKET_NAME=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
 
 SMTP_HOST=
 SMTP_PORT=
