--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,16 +5,20 @@
   "module": "esnext",
   "type": "module",
   "scripts": {
+    "sso": "aws sso login --sso-session=tantovale",
+    "sso-dev": "aws sso login --sso-session=tantovale-dev",
+    "sst-deploy-prod": "sst deploy --stage production",
+    "sst-deploy-dev": "sst deploy --stage dev",
+    "hono:build": "tsc",
     "hono:dev": "tsx watch src/index.ts",
     "hono:start": "node ./dist/src/index.js",
-    "hono:build": "tsc",
     "db:build": "tsx src/index.ts",
-    "db:dev": "tsx --watch",
     "db:check": "npx drizzle-kit check --config=./database/drizzle.config.ts",
-    "db:studio": "npx drizzle-kit studio --config=./database/drizzle.config.ts",
+    "db:dev": "tsx --watch",
     "db:generate": "npx drizzle-kit generate --config=./database/drizzle.config.ts",
     "db:migrate": "tsx ./database/migrate.ts",
     "db:push": "npx drizzle-kit push --config=./database/drizzle.config.ts",
+    "db:studio": "npx drizzle-kit studio --config=./database/drizzle.config.ts",
     "seed:categories": "npx tsx ./database/scripts/seeders/categories/index.ts",
     "seed:countries": "npx tsx ./database/scripts/seeders/countries/index.ts",
     "typecheck": "npx tsc --noEmit"
@@ -23,23 +27,23 @@
     "#*": [
       "./src/*.ts"
     ],
-    "#routes/*": "./src/routes/*.ts",
+    "#database/*": "./database/*.ts",
+    "#database/db": "./database/index.ts",
+    "#database/schema": "./database/schema/schema.ts",
     "#lib/*": "./src/lib/*.ts",
-    "#utils/*": "./src/utils/*.ts",
+    "#mailer/*": "./mailer/*.ts",
+    "#routes/*": "./src/routes/*.ts",
     "#schema": "./src/schema/index.ts",
     "#schema/*": [
       "./src/schema/*.ts",
       "./src/schema/index.ts"
     ],
-    "#database/*": "./database/*.ts",
-    "#database/db": "./database/index.ts",
-    "#database/schema": "./database/schema/schema.ts",
-    "#mailer/*": "./mailer/*.ts"
+    "#utils/*": "./src/utils/*.ts"
   },
   "exports": {
     "./apiRoutes": "./src/app.ts",
-    "./schema": "./src/schema/index.ts",
-    "./lib/constants": "./src/lib/constants.ts"
+    "./lib/constants": "./src/lib/constants.ts",
+    "./schema": "./src/schema/index.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
@@ -62,11 +66,13 @@
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
     "sharp": "^0.33.5",
+    "sst": "3.9.37",
     "stoker": "^1.4.2",
     "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
     "@types/argon2-browser": "^1.18.4",
+    "@types/aws-lambda": "8.10.147",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
