--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
 	"scripts": {
 		"build": "turbo build",
 		"dev": "turbo dev",
-		"dev-storefront": "npm run --workspace=@workspace/storefront next:dev",
 		"dev-server": "npm run --workspace=@workspace/server hono:dev",
-		"lint": "turbo lint",
+		"dev-storefront": "npm run --workspace=@workspace/storefront next:dev",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"prepare": "husky"
+		"lint": "turbo lint",
+		"prepare": "husky",
+		"sso": "aws sso login --sso-session=tantovale",
+		"sso-dev": "aws sso login --sso-session=tantovale-dev",
+		"sst-deploy-prod": "sst deploy --stage production",
+		"sst-deploy-dev": "dotenv -e ./apps/server/.env sst deploy --stage dev",
+		"sst-dev": "dotenv -e ./apps/server/.env npx sst dev"
 	},
 	"engines": {
 		"node": ">=18"
@@ -21,14 +26,21 @@
 		]
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.758.0",
+		"@aws-sdk/lib-storage": "^3.758.0",
+		"@aws-sdk/s3-presigned-post": "^3.758.0",
+		"@aws-sdk/s3-request-presigner": "^3.758.0",
+		"aws-cdk-lib": "^2.184.1",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.39.1",
 		"prettier-plugin-tailwindcss": "^0.6.10",
+		"sst": "3.9.39",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
+		"@types/aws-lambda": "8.10.147",
 		"dotenv-cli": "^8.0.0",
 		"husky": "^9.1.7",
 		"prettier": "^3.2.5",
