--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,16 +30,16 @@
     "./schema": "./src/schema/index.ts"
   },
   "dependencies": {
-    "@workspace/database": "*",
     "@hono/node-server": "^1.13.8",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^0.19.2",
     "@hono/zod-validator": "^0.4.3",
     "@scalar/hono-api-reference": "^0.5.172",
+    "@workspace/database": "*",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
-    "hono": "^4.7.4",
+    "hono": "^4.7.5",
     "hono-openapi": "^0.4.6",
     "hono-pino": "^0.8.0",
     "nodemailer": "^6.10.0",
@@ -48,9 +48,9 @@
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
     "sharp": "^0.33.5",
+    "sst": "*",
     "stoker": "^1.4.2",
-    "zod-openapi": "^4.2.3",
-    "sst": "*"
+    "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
