--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 		"sso-dev": "aws sso login --sso-session=tantovale-dev",
 		"sst-deploy-prod": "sst deploy --stage production",
 		"sst-deploy-dev": "dotenv -e ./apps/server/.env sst deploy --stage dev",
-		"sst-dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ./apps/server/.env npx sst dev"
+		"sst-dev": "dotenv -e ./apps/server/.env npx sst dev"
 	},
 	"engines": {
 		"node": ">=20"
 	},
-	"packageManager": "npm@10.9.2",
+	"packageManager": "npm@11.2.0",
 	"workspaces": {
 		"packages": [
 			"apps/*",
