--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,36 +30,35 @@
     "./schema": "./src/schema/index.ts"
   },
   "dependencies": {
+    "@workspace/database": "*",
     "@hono/node-server": "^1.13.8",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^0.19.2",
     "@hono/zod-validator": "^0.4.3",
-    "@scalar/hono-api-reference": "^0.5.172",
-    "@workspace/database": "*",
-    "bcryptjs": "^3.0.2",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-zod": "^0.7.0",
-    "hono": "^4.7.5",
     "hono-openapi": "^0.4.6",
     "hono-pino": "^0.8.0",
+    "@scalar/hono-api-reference": "^0.5.172",
+    "bcryptjs": "^3.0.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
     "sharp": "^0.33.5",
-    "sst": "*",
     "stoker": "^1.4.2",
-    "zod-openapi": "^4.2.3"
+    "zod-openapi": "^4.2.3",
+    "sst": "*",
+    "drizzle-orm": "*",
+    "drizzle-zod": "*",
+    "zod": "*"
   },
   "devDependencies": {
+    "@workspace/eslint-config": "*",
+    "@workspace/typescript-config": "*",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
-    "@workspace/eslint-config": "*",
-    "@workspace/typescript-config": "*",
     "dotenv-cli": "^8.0.0",
-    "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2"
   }
 }
