--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "sst dev next dev --port 3000",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "next:dev": "sst dev next dev --port 3000",
     "next:build": "next build",
@@ -44,6 +44,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.5.4",
-    "sst": "*"
+    "hono": "*",
+    "sst": "*",
+    "zod": "*"
   }
 }
