--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
 		"@aws-sdk/s3-request-presigner": "^3.758.0",
 		"aws-cdk-lib": "^2.184.1",
 		"dotenv": "^16.4.7",
-		"drizzle-orm": "^0.39.1",
 		"prettier-plugin-tailwindcss": "^0.6.10",
 		"sst": "3.9.39",
+		"hono": "^4.7.5",
+		"drizzle-orm": "^0.39.3",
+		"drizzle-zod": "^0.7.0",
+		"drizzle-kit": "^0.30.4",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
