--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,17 +47,17 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"typescript": "*",
 		"@tailwindcss/postcss": "^4",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
-		"@types/react": "19.0.0",
+		"@types/react": "19.0.8",
 		"@types/react-dom": "19.0.0",
 		"@workspace/eslint-config": "*",
 		"@workspace/typescript-config": "*",
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
 		"react": "^19.0.0",
-		"tailwindcss": "^4",
-		"typescript": "^5.6.3"
+		"tailwindcss": "^4"
 	}
 }
