--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"db": "sst shell drizzle-kit",
+		"db": "npx drizzle-kit",
 		"db:build": "tsx src/index.ts",
 		"db:check": "npx drizzle-kit check",
 		"db:generate": "npx drizzle-kit generate",
@@ -20,7 +20,6 @@
 	},
 	"dependencies": {
 		"pg": "^8.13.1",
-		"sst": "*",
 		"drizzle-orm": "*",
 		"drizzle-zod": "*"
 	},
