--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@workspace/database": "*",
+    "@aws-sdk/client-s3": "^3.772.0",
+    "@aws-sdk/s3-request-presigner": "^3.772.0",
     "@hono/node-server": "^1.13.8",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^0.19.2",
