--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -27,22 +27,23 @@
     "lucide-react": "0.456.0",
     "next": "^15.2.1",
     "next-themes": "^0.4.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "*",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "^20",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "@workspace/eslint-config": "*",
     "@workspace/typescript-config": "*",
+    "hono": "*",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "hono": "*",
+    "typescript": "*",
     "zod": "*"
   }
 }
