--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,11 +29,12 @@
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.3",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"browser-image-compression": "^2.0.2",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"keen-slider": "^6.8.6",
-		"lucide-react": "0.456.0",
+		"lucide-react": "^0.456.0",
 		"motion": "^12.5.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
@@ -47,7 +48,6 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"typescript": "*",
 		"@tailwindcss/postcss": "^4",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
@@ -58,6 +58,7 @@
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
 		"react": "^19.0.0",
-		"tailwindcss": "^4"
+		"tailwindcss": "^4",
+		"typescript": "*"
 	}
 }
