--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
 		"./hooks/*": "./src/hooks/*.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^4.1.3",
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-avatar": "^1.1.3",
@@ -30,6 +31,7 @@
 		"@radix-ui/react-separator": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.3",
+		"@radix-ui/react-tabs": "^1.1.3",
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"browser-image-compression": "^2.0.2",
 		"clsx": "^2.1.1",
@@ -43,10 +45,12 @@
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dnd-touch-backend": "^16.0.1",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
 		"shadcn": "^2.4.0-canary.11",
 		"sonner": "^1.7.4",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
