fix(repo): edit readme

--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -1,17 +1,22 @@
 NODE_ENV=development
-LOG_LEVEL=silent
+LOG_LEVEL=debug
 
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_HOST=localhost
-DATABASE_NAME=
-DATABASE_PORT=5432
+SERVER_HOSTNAME=localhost
+SERVER_PORT=4000
+
+STOREFRONT_HOSTNAME=localhost
+STOREFRONT_PORT=3000
 
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 EMAIL_VERIFY_TOKEN_SECRET=
 RESET_TOKEN_SECRET=
 COOKIE_SECRET=
+
+AWS_REGION=
+AWS_BUCKET_NAME=
+AWS_ACCESS_KEY=
+AWS_SECRET_ACCESS_KEY=
 
 SMTP_HOST=
 SMTP_PORT=
