--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -3,6 +3,8 @@
 	"compilerOptions": {
 		"strict": true,
 		"baseUrl": ".",
+		"outDir": "./dist",
+		"declaration": true,
 		"paths": {
 			"@workspace/database/*": ["./*"]
 		},
