--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -7,13 +7,13 @@ SERVER_PORT=4000
 STOREFRONT_HOSTNAME=localhost
 STOREFRONT_PORT=3000
 
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
-EMAIL_VERIFY_TOKEN_SECRET=
-RESET_TOKEN_SECRET=
-COOKIE_SECRET=
+ACCESS_TOKEN_SECRET=your_access_token_secret
+REFRESH_TOKEN_SECRET=your_refresh_token_secret
+EMAIL_VERIFY_TOKEN_SECRET=your_email_token_secret
+RESET_TOKEN_SECRET=your_reset_token_secret
+COOKIE_SECRET=your_cookie_token_secret
 
-AWS_REGION=
+AWS_REGION=eu-central-1
 AWS_BUCKET_NAME=
 AWS_ACCESS_KEY=
 AWS_SECRET_ACCESS_KEY=
