fix(repo): improved item-create form and added shared packages

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,23 +27,24 @@
   },
   "exports": {
     "./apiRoutes": "./src/app.ts",
-    "./lib/constants": "./src/lib/constants.ts",
+    "./rpc-client": "./src/lib/rpc-client.ts",
     "./schema": "./src/schema/index.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
     "@aws-sdk/s3-request-presigner": "^3.772.0",
+    "hono": "*",
     "@hono/node-server": "^1.13.8",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^0.19.2",
     "@hono/zod-validator": "^0.4.3",
+    "hono-openapi": "^0.4.6",
+    "hono-pino": "^0.8.0",
     "@scalar/hono-api-reference": "^0.5.172",
     "@workspace/database": "*",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "*",
     "drizzle-zod": "*",
-    "hono-openapi": "^0.4.6",
-    "hono-pino": "^0.8.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
