--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -56,8 +56,8 @@
 		"@tailwindcss/postcss": "^4",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
-		"@types/react": "19.0.8",
-		"@types/react-dom": "19.0.0",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "19.0.3",
 		"@workspace/eslint-config": "*",
 		"@workspace/typescript-config": "*",
 		"autoprefixer": "^10.4.20",
