--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -19,9 +19,7 @@
   "dependencies": {
     "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-form": "^1.2.1",
-    "@tanstack/react-query": "^5.64.2",
-    "@workspace/server": "*",
-    "@workspace/ui": "*",
+    "@tanstack/react-query": "*",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "0.456.0",
     "next": "^15.2.1",
@@ -34,9 +32,11 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "^20",
-    "@types/react": "19.0.8",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.3",
     "@workspace/eslint-config": "*",
+    "@workspace/server": "*",
+    "@workspace/shared": "*",
     "@workspace/typescript-config": "*",
     "hono": "*",
     "postcss": "^8",
