--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"drizzle-orm": "^0.39.3",
 		"drizzle-zod": "^0.7.0",
 		"hono": "^4.7.5",
+		"@tanstack/react-query": "^5.64.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
