feat(server): move authPath inside routes

--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -4,8 +4,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "#*": ["./src/*"],
-      "#workspace/ui/*": ["../../packages/ui/src/*"]
+      "#*": ["./src/*"]
     },
     "plugins": [
       {
