--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@workspace/storefront",
+  "sideEffects": false,
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -17,12 +18,16 @@
     ]
   },
   "dependencies": {
+    "@workspace/typescript-config": "*",
+    "@workspace/eslint-config": "*",
+    "@workspace/server": "*",
+    "@workspace/shared": "*",
     "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-form": "^1.2.1",
     "@tanstack/react-query": "*",
     "browser-image-compression": "^2.0.2",
     "lucide-react": "0.456.0",
-    "next": "^15.2.4",
+    "next": "^15.2.1",
     "next-themes": "^0.4.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
@@ -34,10 +39,6 @@
     "@types/node": "^20",
     "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.3",
-    "@workspace/eslint-config": "*",
-    "@workspace/server": "*",
-    "@workspace/shared": "*",
-    "@workspace/typescript-config": "*",
     "hono": "*",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
