--- a/package.json
+++ b/package.json
@@ -7,12 +7,6 @@
 		"dev": "turbo run dev",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"lint": "turbo lint",
-		"dev-server": "npm run --workspace=@workspace/server hono:dev",
-		"dev-storefront": "npm run --workspace=@workspace/storefront next:dev",
-		"dev-db-push": "npm run --workspace=@workspace/database db:push",
-		"dev-seed-users": "npm run --workspace=@workspace/database seed:users",
-		"dev-seed-categories": "npm run --workspace=@workspace/database seed:categories",
-		"dev-seed-countries": "npm run --workspace=@workspace/database seed:countries",
 		"seed-all": "bash seed-all.sh",
 		"prepare": "husky"
 	},
@@ -23,7 +17,7 @@
 	"workspaces": {
 		"packages": [
 			"apps/*",
-			"packages/*"
+			"packages/**"
 		]
 	},
 	"dependencies": {
@@ -31,6 +25,7 @@
 		"@aws-sdk/lib-storage": "^3.758.0",
 		"@aws-sdk/s3-presigned-post": "^3.758.0",
 		"@aws-sdk/s3-request-presigner": "^3.758.0",
+		"@tanstack/react-query": "^5.64.2",
 		"aws-cdk-lib": "^2.184.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
@@ -38,7 +33,6 @@
 		"drizzle-orm": "^0.39.3",
 		"drizzle-zod": "^0.7.0",
 		"hono": "^4.7.5",
-		"@tanstack/react-query": "^5.64.2",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
