--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@workspace/typescript-config",
 	"version": "1.0.0",
+	"sideEffects": false,
 	"private": true,
 	"license": "MIT",
 	"publishConfig": {
